fix scroll overflow

--- a/src/app/client/client.component.scss
+++ b/src/app/client/client.component.scss
@@ -70,7 +70,6 @@ table {
   tbody {
     width: 100%;
     display: block;
-    overflow: auto;
     max-height: 41vh;
     padding: 0;
   }
