--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -105,7 +105,6 @@ table {
   tbody {
     width: 100%;
     display: block;
-    overflow: auto;
     max-height: 41vh;
     padding: 0;
   }
